@startuml backOfficeModule
hide methods
left to right direction

skinparam classAttributeIconSize 0

skinparam class {
    LifeLineBorderColor DodgerBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #D8F5FF
    ArrowColor DodgerBlue
    BorderColor DodgerBlue
}

skinparam packageStyle rectangle

skinparam card {
    LifeLineBorderColor DodgerBlue
    LifeLineBackgroundColor APPLICATION
    BackgroundColor #D8F5FF
    ArrowColor DodgerBlue
    BorderColor DodgerBlue
}

class Users{
    Username
    Role
    Email
    firstName
    lastName
    fullName
}

class Patient{
    dateOfBirth
    Gender
    recordNumber
    emergencyContact
}

class Staff{
    licenseNumber
    availabilitySlots
}

class OperationRequest{
    requestID
    deadlineDate
    priority
    status
}

class OperationType{
    typeID
    name
    requiredStaffBySpecilization
    estimatedDuration
}

class Phone{
    phoneNumber
}

class Appointment{
    appointmentID
    dateAndTime
    appointmentStatus
}

class SurgeryRoom{
    roomNumber
    type
    roomStatus
    capacity
    assignedEquipment
    maintenenceSlots
}

class Specialization{
    name
}

class MedicalRecord{
    medicalRecordNumber
    allergiesMedicalConditions
    appointmentHistory
}

Patient "1" *--> "1" Phone: phoneNumber
Staff "1" *--> "1" Phone: phoneNumber
Patient "1" *--> "1" Users: user
Staff "1" *--> "1" Users: user
Staff "1" *--> "1" Specialization: specialization

OperationRequest "1" *--> "1" OperationType: type
OperationRequest "1" *--> "1" Staff: staff
OperationRequest "1" *--> "1" Patient: patient

OperationType "1" *--> "1" Staff: staff

Appointment "1" *--> "1" SurgeryRoom: room
Appointment "1" *--> "1" OperationRequest: request

MedicalRecord "1" *--> "1" Patient: patient
MedicalRecord "1" *--> "..*" Staff: staff
MedicalRecord "1" *--> "..*" OperationRequest: requests
MedicalRecord "1" *--> "..*" Appointment: appointments

@enduml
